logs/punc.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/enum'...
Listing './lib/python3.5/site-packages/enum34-1.1.6.dist-info'...
Listing './lib/python3.5/site-packages/eventlet'...
Listing './lib/python3.5/site-packages/eventlet/green'...
Listing './lib/python3.5/site-packages/eventlet/green/OpenSSL'...
Listing './lib/python3.5/site-packages/eventlet/green/http'...
Listing './lib/python3.5/site-packages/eventlet/green/urllib'...
Listing './lib/python3.5/site-packages/eventlet/greenio'...
Listing './lib/python3.5/site-packages/eventlet/hubs'...
Listing './lib/python3.5/site-packages/eventlet/support'...
Listing './lib/python3.5/site-packages/eventlet/support/dns'...
Listing './lib/python3.5/site-packages/eventlet/support/dns/rdtypes'...
Listing './lib/python3.5/site-packages/eventlet/support/dns/rdtypes/ANY'...
Listing './lib/python3.5/site-packages/eventlet/support/dns/rdtypes/IN'...
Listing './lib/python3.5/site-packages/eventlet/zipkin'...
Listing './lib/python3.5/site-packages/eventlet/zipkin/_thrift'...
Listing './lib/python3.5/site-packages/eventlet/zipkin/_thrift/zipkinCore'...
Listing './lib/python3.5/site-packages/eventlet-0.22.0.dist-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/hgdemandimport'...
Listing './lib/python3.5/site-packages/hgext'...
Listing './lib/python3.5/site-packages/hgext/convert'...
Listing './lib/python3.5/site-packages/hgext/fsmonitor'...
Listing './lib/python3.5/site-packages/hgext/fsmonitor/pywatchman'...
Listing './lib/python3.5/site-packages/hgext/highlight'...
Listing './lib/python3.5/site-packages/hgext/largefiles'...
Listing './lib/python3.5/site-packages/hgext/zeroconf'...
Listing './lib/python3.5/site-packages/hgext3rd'...
Listing './lib/python3.5/site-packages/jsonrpclib'...
Compiling './lib/python3.5/site-packages/jsonrpclib/SimpleJSONRPCServer.py'...
***   File "./lib/python3.5/site-packages/jsonrpclib/SimpleJSONRPCServer.py", line 62
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jsonrpclib-0.1.7.egg-info'...
Listing './lib/python3.5/site-packages/mercurial'...
Listing './lib/python3.5/site-packages/mercurial/cext'...
Listing './lib/python3.5/site-packages/mercurial/cffi'...
Listing './lib/python3.5/site-packages/mercurial/default.d'...
Listing './lib/python3.5/site-packages/mercurial/help'...
Listing './lib/python3.5/site-packages/mercurial/help/internals'...
Listing './lib/python3.5/site-packages/mercurial/hgweb'...
Listing './lib/python3.5/site-packages/mercurial/httpclient'...
Listing './lib/python3.5/site-packages/mercurial/locale'...
Listing './lib/python3.5/site-packages/mercurial/locale/da'...
Listing './lib/python3.5/site-packages/mercurial/locale/da/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mercurial/locale/de'...
Listing './lib/python3.5/site-packages/mercurial/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mercurial/locale/el'...
Listing './lib/python3.5/site-packages/mercurial/locale/el/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mercurial/locale/fr'...
Listing './lib/python3.5/site-packages/mercurial/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mercurial/locale/it'...
Listing './lib/python3.5/site-packages/mercurial/locale/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mercurial/locale/ja'...
Listing './lib/python3.5/site-packages/mercurial/locale/ja/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mercurial/locale/pt_BR'...
Listing './lib/python3.5/site-packages/mercurial/locale/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mercurial/locale/ro'...
Listing './lib/python3.5/site-packages/mercurial/locale/ro/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mercurial/locale/ru'...
Listing './lib/python3.5/site-packages/mercurial/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mercurial/locale/sv'...
Listing './lib/python3.5/site-packages/mercurial/locale/sv/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mercurial/locale/zh_CN'...
Listing './lib/python3.5/site-packages/mercurial/locale/zh_CN/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mercurial/locale/zh_TW'...
Listing './lib/python3.5/site-packages/mercurial/locale/zh_TW/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mercurial/pure'...
Listing './lib/python3.5/site-packages/mercurial/templates'...
Listing './lib/python3.5/site-packages/mercurial/templates/atom'...
Listing './lib/python3.5/site-packages/mercurial/templates/coal'...
Listing './lib/python3.5/site-packages/mercurial/templates/gitweb'...
Listing './lib/python3.5/site-packages/mercurial/templates/json'...
Listing './lib/python3.5/site-packages/mercurial/templates/monoblue'...
Listing './lib/python3.5/site-packages/mercurial/templates/paper'...
Listing './lib/python3.5/site-packages/mercurial/templates/raw'...
Listing './lib/python3.5/site-packages/mercurial/templates/rss'...
Listing './lib/python3.5/site-packages/mercurial/templates/spartan'...
Listing './lib/python3.5/site-packages/mercurial/templates/static'...
Listing './lib/python3.5/site-packages/mercurial/thirdparty'...
Listing './lib/python3.5/site-packages/mercurial/thirdparty/attr'...
Listing './lib/python3.5/site-packages/mercurial-4.4.2.egg-info'...
Listing './lib/python3.5/site-packages/notch'...
Listing './lib/python3.5/site-packages/notch/client'...
Compiling './lib/python3.5/site-packages/notch/client/client.py'...
***   File "./lib/python3.5/site-packages/notch/client/client.py", line 432
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/notch/client/lb_transport.py'...
***   File "./lib/python3.5/site-packages/notch/client/lb_transport.py", line 247
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/notch/client/shard.py'...
***   File "./lib/python3.5/site-packages/notch/client/shard.py", line 159
    except (OSError, IOError, yaml.error.YAMLError), e:
                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/notch.client-0.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/punc'...
Compiling './lib/python3.5/site-packages/punc/collect.py'...
***   File "./lib/python3.5/site-packages/punc/collect.py", line 77
    except KeyError, exc:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/punc/config.py'...
***   File "./lib/python3.5/site-packages/punc/config.py", line 43
    except (OSError, IOError), e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/punc/main.py'...
***   File "./lib/python3.5/site-packages/punc/main.py", line 68
    except (OSError, IOError), e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/punc/model.py'...
***   File "./lib/python3.5/site-packages/punc/model.py", line 307
    os.makedirs(self.base_path, mode=0755)
                                        ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/punc/rc_hg.py'...
***   File "./lib/python3.5/site-packages/punc/rc_hg.py", line 62
    except mercurial.error.RepoError, e:
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/punc/rulesets'...
Compiling './lib/python3.5/site-packages/punc/util.py'...
***   File "./lib/python3.5/site-packages/punc/util.py", line 54
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/punc-0.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
